# LFM_GAMMA

./: .gitignore  AGENTIC_WORKFLOW.md  AGENTS.md  How_to_run_project  README.md  render.yaml
agent-core/: .dockerignore  .env.example  .gitignore  BACKEND_DELETION_READINESS.md  Dockerfile  PPT_AGENT_CUTOVER_MAP.md  README.md  mcp_probe.py  pyproject.toml  requirements.txt  run_api.ps1  run_api.py
agent-core/scripts/: native_parity_check.py
agent-core/src/agent_core/: __init__.py  config.py  models.py
agent-core/src/agent_core/agents/: __init__.py  base.py  graph_builder.py
agent-core/src/agent_core/agents/export_agent/: __init__.py  agent.py
agent-core/src/agent_core/agents/post_tagging/: agent.py
agent-core/src/agent_core/agents/ppt_agent/: __init__.py  agent.py
agent-core/src/agent_core/api/: __init__.py  app.py  models.py  routes.py
agent-core/src/agent_core/api/static/: index.html  scrape.html
agent-core/src/agent_core/mcp_server/: __init__.py  server.py
agent-core/src/agent_core/ppt_native/: __init__.py  gamma_export.py  service.py
agent-core/src/agent_core/router/: __init__.py  intent_router.py  registry.py
agent-core/src/agent_core/state/: __init__.py  schemas.py  session.py
agent-core/src/agent_core/tools/: __init__.py  base.py  registry.py
agent-core/src/agent_core/tools/implementations/: __init__.py  calculator.py  database.py  pdf_export_tool.py  ppt_backend.py  vector_store.py  web_search.py
agent-core/src/agent_core/tools/implementations/post_tagging/: __init__.py  extract_facebook_post.py  extract_post_media.py  read_csv.py  (+4 more)
(+102 files in other folders)
